--- a/_posts/2021-06-29-encuesta.md
+++ b/_posts/2021-06-29-encuesta.md
@@ -14,7 +14,7 @@ Hace unos días planteamos una [encuesta en twitter](https://twitter.com/GacetaE
 
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
-### Tankes
+### Tanques.
 
 <div class="container">
     <div class="row">
@@ -52,9 +52,9 @@ if (grTankes) {
         label: '',
         data: [
           33.1,
-          33.1,
+          12.4,
           21.4,
-          12.4
+          33.1
         ],
         backgroundColor: [          
           '#a8d2e6',
@@ -69,10 +69,9 @@ if (grTankes) {
 }
 </script>
 
-Como vemos la mayoría de nuestros jugadores se decantan por ***Paladin*** o ***Warrior***, los tankes tradicionales desde ***A Realm Reborn***, y aunque podemos decir que hay bastante jugadores de las otras profesiones sin duda la gente prefiere el valor seguro que los tradicionales proporcionan.
+El ***Paladin*** y el ***DarkKnight*** son los tanques preferidos por los jugadores aunque el ***Gunbreaker*** es un tanque que también gusta, aunque lleva poco tiempo ya que ha sido introducido en *Shadowbringers*. El ***Warrior*** pese a ser una clase nacida desde el inicio de **Final Fantasy XIV** ha sido la profesión menos votada de toda la encuesta.
 
-
-### Sanadores
+### Sanadores.
 
 <div class="container">
     <div class="row">
@@ -124,10 +123,9 @@ if (grHeal) {
 }
 </script>
 
-La mayoria de jugadores ha elegido al versatil **Astrologian** como su sanador preferido, pese a ser al mas nuevo entre ellos. Hay que destacar que el White Mage le sigue de cerca y que desafortunadamente el Scholar esta bastante atras de los otros dos, cosa que podria cambiar con el cambio en los Healers para Endwalker.
+La mayoría de jugadores ha elegido al versátil ***Astrologian*** como su sanador preferido, pese a ser al más nuevo entre ellos. Hay que destacar que el ***White Mage*** le sigue de cerca y desafortunadamente el ***Scholar*** está bastante atrás de los otros dos, cosa que podría cambiar con el cambio en los sanadores para **Endwalker**.
 
-
-### Combatientes cuerpo a cuerpo
+### Combatientes cuerpo a cuerpo.
 
 <div class="container">
     <div class="row">
@@ -182,10 +180,9 @@ if (gtMelee) {
 }
 </script>
 
-Para los jugadores las profesiones favoritas, a partes iguales, son  **Samurai y Dragoon**, dejando en un segundo plano a Ninja y Monk pese a que ambos despiertan interes en muchos jugadores. Es curioso que el rediseño del Monk en los ultimos parches no le ha traido mas seguires. Veremos como cambiaran estos datos al introducirse una nueva profesion cuerpo a cuerpo en Endwalker.
+Para los jugadores las profesiones favoritas, a partes iguales, son  ***Samurai*** y el ***Dragoon***, dejando en un segundo plano al ***Ninja*** y al ***Monk*** pese a que ambos despiertan interés en muchos jugadores. Es curioso que el rediseño del Monk en los últimos parches no le ha traído más seguires. Veremos como cambiarán estos datos al introducirse una nueva profesion cuerpo a cuerpo en **Endwalker**, el ***Reaper***.
 
-
-### Combatientes fisico a distancia
+### Combatientes físico a distancia.
 
 <div class="container">
     <div class="row">
@@ -237,10 +234,9 @@ if (grRanged) {
 }
 </script>
 
-Para este grupo los jugadores han divido su opinion entre las profesiones casi igualmente, siendo solo el **Machinist** que sale delante solo por un poco dejando a los Bard y Dancer igualados entre los jugadores. Cabe destacar que pese a que el Machinist suele aportar menos beneficos a un grupo que las otras dos profesiones los jugadores prefieren su modo de juego indistintamente.
+Para este grupo los jugadores han divido su opinión entre las profesiones casi igualmente, siendo solo el ***Machinist*** el que sale adelante por un poco, dejando al ***Bard*** y al ***Dancer*** igualados entre los jugadores. Cabe destacar que pese a que el Machinist suele aportar menos beneficos a un grupo que las otras dos profesiones, los jugadores prefieren su modo de juego indistintamente.
 
-
-### Combatientes Magicos
+### Combatientes Mágicos.
 
 <div class="container">
     <div class="row">
@@ -292,10 +288,10 @@ if (grMagic) {
 }
 </script>
 
-Para el grupo final los jugadores han elijido como su favorito el **Red Mage**, la profesion mas votada dentro de toda la encuenta, aunque el Black Mage parece ser tambien bastante popular, en ultimo puesto recae en el Summoner que pese a que aun tiene un gran numero de jugadores esta bastante por detras de las otras dos profesiones quizas porque su estilo de juego no ha evolucionado tanto como las otras profesiones.
+Para el grupo final los jugadores han elegido como su favorito al ***Red Mage***, siendo la profesián más votada dentro de toda la encuesta, aunque el ***Black Mage*** parece ser también bastante popular. El último puesto recae en el ***Summoner*** que pese a que aún tiene un gran número de jugadores está bastante por detrás de las otras dos profesiones quizás porque su estilo de juego no ha evolucionado tanto como las otras.
 
 ### Conclusiones
 
-Como vemos los numeros han estado muy igualados en muchas profesiones, salvo alguna excepcion la mayoria tiene 20% o mas de jugadores entre sus favoritas, lo cual vuelve a mostrar uno de las cosas que nos gusta tanto de este juego y es que con cualquier profesion puede completar todo el contenido.
+Como vemos los números han estado **muy igualados** en muchas profesiones, salvo alguna excepción la mayoría tiene un 20% o más de votos entre las profesiones preferidas de los jugadores, lo cual vuelve a mostrar una de las cosas que nos gusta tanto de este juego: **Con cualquier profesión puede completar todo el contenido**.
 
-Esperemos que os haya gustado y prometemos repetir esta encuesta unos meses pasados la entrada de Endwalker.
+Esperemos que os haya gustado y prometemos repetir esta encuesta unos meses pasados la entrada de **Endwalker**.
