--- a/_posts/2021-06-29-encuesta.md
+++ b/_posts/2021-06-29-encuesta.md
@@ -2,8 +2,8 @@
 layout: post
 title:  "Encuesta - profesiones preferidas"
 author: cecile
-categories: [ lore ]
-tags: [multimedia, video, lore]
+categories: [ encuestas ]
+tags: [encuestas, profesiones, votacion, twitter]
 image: assets/images/articles/encuestas/profesiones/xiv.jpg
 description: "Encuesta sobre las profesiones preferidas de Fintal Fantasy XIV."
 featured: false
@@ -44,23 +44,23 @@ if (grTankes) {
   data: {
       labels: [
         'Paladin',
-        'Warrior',
+        'DarkKnight',
         'Gunbreaker',
-        'DarkKnight',        
+        'Warrior',        
       ],
       datasets: [{
         label: '',
         data: [
           33.1,
-          12.4,
+          33.1,
           21.4,
-          33.1
+          12.4
         ],
         backgroundColor: [          
           '#a8d2e6',
-          '#cf2621',
+          '#d126cc',
           '#796d30',
-          '#d126cc'
+          '#cf2621'
         ],
         axis: 'y',
       }]
