--- a/_posts/2021-06-29-encuesta.md
+++ b/_posts/2021-06-29-encuesta.md
@@ -180,7 +180,7 @@ if (gtMelee) {
 }
 </script>
 
-Para los jugadores las profesiones favoritas, a partes iguales, son  ***Samurai*** y el ***Dragoon***, dejando en un segundo plano al ***Ninja*** y al ***Monk*** pese a que ambos despiertan interés en muchos jugadores. Es curioso que el rediseño del Monk en los últimos parches no le ha traído más seguires. Veremos como cambiarán estos datos al introducirse una nueva profesion cuerpo a cuerpo en **Endwalker**, el ***Reaper***.
+Para los jugadores las profesiones favoritas, a partes iguales, son  ***Samurai*** y el ***Dragoon***, dejando en un segundo plano al ***Ninja*** y al ***Monk*** pese a que ambos despiertan interés en muchos jugadores. Es curioso que el rediseño del Monk en los últimos parches no le ha traído más seguidores. Veremos como cambiarán estos datos al introducirse una nueva profesion cuerpo a cuerpo en **Endwalker**, el ***Reaper***.
 
 ### Combatientes físico a distancia.
 
