--- a/_posts/2021-05-21-traducir.md
+++ b/_posts/2021-05-21-traducir.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "Traducir los diálogos y cinemáticas con Tataru Helper."
 author: sharn
-categories: [ herramientas ]
+categories: [ guias ]
 tags: [nuevos jugadores, herramientas, tataru, traduccir, traducción]
 image: assets/images/articles/guias/traduccion/tataru_img.png
 description: "En este hilo voy a explicar como poder traducir los diálogos y las cinemáticas de Final Fantasy XIV Online al Español (o cualquier idioma) que queráis."
