--- a/_posts/2021-06-29-encuesta.md
+++ b/_posts/2021-06-29-encuesta.md
@@ -10,7 +10,7 @@ featured: false
 hidden: false
 ---
 
-Hace unos días planteamos una [encuesta en twitter](https://twitter.com/GacetaEorzea/status/1406553074886455297){:target="_blank"} sobre vuestras **profesiones** preferidas en **Final Fnatasy XIV**, ahora vamos a compartir los resultados.
+Hace unos días planteamos una [encuesta en twitter](https://twitter.com/GacetaEorzea/status/1406553074886455297){:target="_blank"} sobre vuestras **profesiones** preferidas en **Final Fantasy XIV**, ahora vamos a compartir los resultados.
 
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
@@ -69,7 +69,7 @@ if (grTankes) {
 }
 </script>
 
-El ***Paladin*** y el ***DarkKnight*** son los tanques preferidos por los jugadores aunque el ***Gunbreaker*** es un tanque que también gusta, aunque lleva poco tiempo ya que ha sido introducido en *Shadowbringers*. El ***Warrior*** pese a ser una clase nacida desde el inicio de **Final Fantasy XIV** ha sido la profesión menos votada de toda la encuesta.
+El ***Paladin*** y el ***DarkKnight*** son los tanques preferidos por los jugadores aunque el *Gunbreaker* es un tanque que también gusta, pese a que lleva poco tiempo ya fue introducido en *Shadowbringers*. Finalmente el *Warrior* pese a ser una clase nacida desde el inicio de **Final Fantasy XIV** ha sido la profesión menos votada de toda la encuesta.
 
 ### Sanadores.
 
@@ -123,7 +123,7 @@ if (grHeal) {
 }
 </script>
 
-La mayoría de jugadores ha elegido al versátil ***Astrologian*** como su sanador preferido, pese a ser al más nuevo entre ellos. Hay que destacar que el ***White Mage*** le sigue de cerca y desafortunadamente el ***Scholar*** está bastante atrás de los otros dos, cosa que podría cambiar con el cambio en los sanadores para **Endwalker**.
+La mayoría de jugadores ha elegido al versátil ***Astrologian*** como su sanador preferido, pese a ser al más nuevo entre ellos. Hay que destacar que el ***White Mage*** le sigue de cerca y desafortunadamente el ***Scholar*** está bastante atrás de los otros dos, cosa que podría cambiar con **Endwalker** con la introduccion del *Sage* y el cambio en el resto de sanadores.
 
 ### Combatientes cuerpo a cuerpo.
 
@@ -180,7 +180,7 @@ if (gtMelee) {
 }
 </script>
 
-Para los jugadores las profesiones favoritas, a partes iguales, son  ***Samurai*** y el ***Dragoon***, dejando en un segundo plano al ***Ninja*** y al ***Monk*** pese a que ambos despiertan interés en muchos jugadores. Es curioso que el rediseño del Monk en los últimos parches no le ha traído más seguidores. Veremos como cambiarán estos datos al introducirse una nueva profesion cuerpo a cuerpo en **Endwalker**, el ***Reaper***.
+Para los jugadores, las profesiones favoritas de cuerpo a cuerpo, a partes iguales, son  ***Samurai*** y el ***Dragoon***, dejando en un segundo plano al *Ninja* y al *Monk* pese a que ambos despiertan interés en muchos jugadores. Es curioso que el rediseño del Monk en los últimos parches no le ha traído más seguidores. Veremos como cambiarán estos datos al introducirse una nueva profesion cuerpo a cuerpo en **Endwalker**, el *Reaper*.
 
 ### Combatientes físico a distancia.
 
@@ -234,7 +234,7 @@ if (grRanged) {
 }
 </script>
 
-Para este grupo los jugadores han divido su opinión entre las profesiones casi igualmente, siendo solo el ***Machinist*** el que sale adelante por un poco, dejando al ***Bard*** y al ***Dancer*** igualados entre los jugadores. Cabe destacar que pese a que el Machinist suele aportar menos beneficos a un grupo que las otras dos profesiones, los jugadores prefieren su modo de juego indistintamente.
+Las preferencias sobre los combatientes físico a distancia entre los jugadores ha sido divida  casi igualmente, siendo solo el ***Machinist*** el que sale adelante por un poco, dejando al *Bard* y al *Dancer* igualados entre los jugadores. Cabe destacar que pese a que el *Machinist* suele aportar menos beneficos a un grupo que las otras dos profesiones, los jugadores prefieren su modo de juego indistintamente.
 
 ### Combatientes Mágicos.
 
@@ -288,10 +288,10 @@ if (grMagic) {
 }
 </script>
 
-Para el grupo final los jugadores han elegido como su favorito al ***Red Mage***, siendo la profesián más votada dentro de toda la encuesta, aunque el ***Black Mage*** parece ser también bastante popular. El último puesto recae en el ***Summoner*** que pese a que aún tiene un gran número de jugadores está bastante por detrás de las otras dos profesiones quizás porque su estilo de juego no ha evolucionado tanto como las otras.
+Para el grupo de los combatientes mágicos los jugadores han elegido como su favorito al ***Red Mage***, siendo la profesián más votada dentro de toda la encuesta, aunque el *Black Mage* parece ser también bastante popular. El último puesto recae en el *Summoner* que pese a que aún tiene un gran número de jugadores está bastante por detrás de las otras dos profesiones quizás porque su estilo de juego no ha evolucionado tanto como las otras.
 
 ### Conclusiones
 
 Como vemos los números han estado **muy igualados** en muchas profesiones, salvo alguna excepción la mayoría tiene un 20% o más de votos entre las profesiones preferidas de los jugadores, lo cual vuelve a mostrar una de las cosas que nos gusta tanto de este juego: **Con cualquier profesión puede completar todo el contenido**.
 
-Esperemos que os haya gustado y prometemos repetir esta encuesta unos meses pasados la entrada de **Endwalker**.
+*Esperemos que os haya gustado y prometemos repetir esta encuesta unos meses pasados la entrada de **Endwalker**.*
