--- a/_posts/2021-06-29-encuesta.md
+++ b/_posts/2021-06-29-encuesta.md
@@ -69,7 +69,7 @@ if (grTankes) {
 }
 </script>
 
-El ***Paladin*** y el ***DarkKnight*** son los tanques preferidos por los jugadores aunque el *Gunbreaker* es un tanque que también gusta, pese a que lleva poco tiempo ya fue introducido en *Shadowbringers*. Finalmente el *Warrior* pese a ser una clase nacida desde el inicio de **Final Fantasy XIV** ha sido la profesión menos votada de toda la encuesta.
+El ***Paladin*** y el ***DarkKnight*** son los tanques preferidos por los jugadores aunque el *Gunbreaker* es un tanque que también gusta, pese a que lleva poco tiempo ya fue introducido en **Shadowbringers**. Finalmente el *Warrior* pese a ser una clase nacida desde el inicio de **Final Fantasy XIV** ha sido la profesión menos votada de toda la encuesta.
 
 ### Sanadores.
 
@@ -123,7 +123,7 @@ if (grHeal) {
 }
 </script>
 
-La mayoría de jugadores ha elegido al versátil ***Astrologian*** como su sanador preferido, pese a ser al más nuevo entre ellos. Hay que destacar que el ***White Mage*** le sigue de cerca y desafortunadamente el ***Scholar*** está bastante atrás de los otros dos, cosa que podría cambiar con **Endwalker** con la introduccion del *Sage* y el cambio en el resto de sanadores.
+La mayoría de jugadores ha elegido al versátil ***Astrologian*** como su sanador preferido, pese a ser al más nuevo entre ellos. Hay que destacar que el *White Mage* le sigue de cerca y desafortunadamente el *Scholar* está bastante atrás de los otros dos, cosa que podría cambiar con **Endwalker** con la introduccion del *Sage* y el cambio en el resto de sanadores.
 
 ### Combatientes cuerpo a cuerpo.
 
