coreccion del fashion

--- a/_posts/2021-07-02-fashion210702.md
+++ b/_posts/2021-07-02-fashion210702.md
@@ -17,7 +17,11 @@ Una semana mas [Kaiyoko Star](https://twitter.com/kaiyokostar){:target="_blank"}
 Para hacer los 80 puntos de manera facil y ganar los 60,000 MGP :
 
 - En **pechera** <a href="https://eu.finalfantasyxiv.com/lodestone/playguide/db/item/83f54d7a48d/" class="eorzeadb_link" target="_blank"> Amateur's Doublet Vest </a>, que podeis comprar a <a href="https://eu.finalfantasyxiv.com/lodestone/playguide/db/shop/5c0bdbdc542/?item=791b438d0fe&type=gil" class="eorzeadb_link" target="_blank">Domitien</a> en **Old Gridania (X:14.3 Y:9.8)** en la categoria *Purchase Disciple of the Hand / Land Gear* > Purchase Gear (Lv. 1-9) por 308 gil.
-- En **pantalones** <a href="https://eu.finalfantasyxiv.com/lodestone/playguide/db/item/d46a9844c4b/" class="eorzeadb_link" target="_blank"> Oasis Sarouel </a>, que podeis comprar a <a href="https://eu.finalfantasyxiv.com/lodestone/playguide/db/shop/c644e9a1b2b/?item=b6f5f824586&type=currency" class="eorzeadb_link" target="_blank">Gold Saucer Attendant</a> en **Gold Saucer** (X:5.1 Y:6.6) por **1.000 MGP**.
+- Para la segunda pieza, que son **pantalones**, tendremos que diferencia si nuestro personaje es chico o chica, ambos se pueden comprar a <a href="https://eu.finalfantasyxiv.com/lodestone/playguide/db/shop/c644e9a1b2b/?item=b6f5f824586&type=currency" class="eorzeadb_link" target="_blank">Gold Saucer Attendant</a> en **Gold Saucer** (X:5.1 Y:6.6) por **1.000 MGP**.    
+    - Si vuestro personaje es chica seran <a href="https://eu.finalfantasyxiv.com/lodestone/playguide/db/item/d46a9844c4b/" class="eorzeadb_link" target="_blank">Oasis Sarouel</a>.
+    - Si vuestro personaje es chico seran <a href="https://eu.finalfantasyxiv.com/lodestone/playguide/db/item/430dd2cf675/" class="eorzeadb_link" target="_blank"> Oasis Halftrews</a>.
+
+
 
 Sino teneis desbloqueados el fashion report lo podeis hacer mediante la quest <a href="https://eu.finalfantasyxiv.com/lodestone/playguide/db/quest/bd8144d7d23" class="eorzeadb_link" target="_blank">Passion for Fashion</a> la cual os la da <a href="https://eu.finalfantasyxiv.com/lodestone/playguide/db/npc/npc/bfd5ce76f91/" class="eorzeadb_link" target="_blank">Lewena</a> en The Gold Saucer (X: 4.8 Y: 6.1).
 
