--- a/_posts/2021-07-02-fashion210702.md
+++ b/_posts/2021-07-02-fashion210702.md
@@ -17,7 +17,7 @@ Una semana mas [Kaiyoko Star](https://twitter.com/kaiyokostar){:target="_blank"}
 Para hacer los 80 puntos de manera facil y ganar los 60,000 MGP :
 
 - En **pechera** <a href="https://eu.finalfantasyxiv.com/lodestone/playguide/db/item/83f54d7a48d/" class="eorzeadb_link" target="_blank"> Amateur's Doublet Vest </a>, que podeis comprar a <a href="https://eu.finalfantasyxiv.com/lodestone/playguide/db/shop/5c0bdbdc542/?item=791b438d0fe&type=gil" class="eorzeadb_link" target="_blank">Domitien</a> en **Old Gridania (X:14.3 Y:9.8)** en la categoria *Purchase Disciple of the Hand / Land Gear* > Purchase Gear (Lv. 1-9) por 308 gil.
-- Para la segunda pieza, que son **pantalones**, tendremos que diferencia si nuestro personaje es chico o chica, ambos se pueden comprar a <a href="https://eu.finalfantasyxiv.com/lodestone/playguide/db/shop/c644e9a1b2b/?item=b6f5f824586&type=currency" class="eorzeadb_link" target="_blank">Gold Saucer Attendant</a> en **Gold Saucer** (X:5.1 Y:6.6) por **1.000 MGP**.    
+- Para la segunda pieza, que son **pantalones**, tendremos que diferenciar si nuestro personaje es chico o chica, ambos se pueden comprar a <a href="https://eu.finalfantasyxiv.com/lodestone/playguide/db/shop/c644e9a1b2b/?item=b6f5f824586&type=currency" class="eorzeadb_link" target="_blank">Gold Saucer Attendant</a> en **Gold Saucer** (X:5.1 Y:6.6) por **1.000 MGP**.    
     - Si vuestro personaje es chica seran <a href="https://eu.finalfantasyxiv.com/lodestone/playguide/db/item/d46a9844c4b/" class="eorzeadb_link" target="_blank">Oasis Sarouel</a>.
     - Si vuestro personaje es chico seran <a href="https://eu.finalfantasyxiv.com/lodestone/playguide/db/item/430dd2cf675/" class="eorzeadb_link" target="_blank"> Oasis Halftrews</a>.
 
