--- a/_posts/2021-07-10-7_special_14h.md
+++ b/_posts/2021-07-10-7_special_14h.md
@@ -64,6 +64,7 @@ Estará disponible para **descargar** desde el **domingo 11 a las 9:00 a.m**, de
 Resumimos lo que hemos encontrado interesante sobre la prueba de rendimiento:
 
 - Poder probar si nuestros **equipos** están **preparados para Endwalker**.
+- La **escala ha subido de 7000 a 15000** para ver el rendimiento y **potencia** en los **nuevos equipos** de los jugadores.
 - Veremos numerosas **nuevas localizaciones** de la expansión.
 - Podemos ver algunos de los **nuevas armaduras** y alguno de los nuevos **enemigos**.
 - Escucharemos fragmentos de algunas de las **nuevas canciones**.
