--- a/_posts/2021-07-10-7_special_14h.md
+++ b/_posts/2021-07-10-7_special_14h.md
@@ -59,7 +59,7 @@ Se nos presento la nueva prueba de rendimiento (*Benchmark en Ingles*), la herra
 
 Tenemos que destacar muchas cosas sobre esto:
 
-Estará disponible para **descargar** desde el **domingo 11 a las 9:00 a.m**, desde la gaceta suponemos que sera la ubicación habitual: [https://eu.finalfantasyxiv.com/benchmark/](https://eu.finalfantasyxiv.com/benchmark/){:target="_blank"}.
+Estará disponible para **descargar** desde el **domingo 11 a las 9:00 a.m**, desde la gaceta suponemos que sera [la ubicación habitual](https://eu.finalfantasyxiv.com/benchmark/){:target="_blank"}.
 
 Resumimos lo que hemos encontrado interesante sobre la prueba de rendimiento:
 
