--- a/_posts/2021-07-10-7_special_14h.md
+++ b/_posts/2021-07-10-7_special_14h.md
@@ -36,7 +36,7 @@ En la fila de delante, de izquierda a derecha:
 - Soken del equipo de sonido y uno de los compositores principales del juego.
 
 
-También pudimos a otros miembros del equipo y finalmente al CEO de Square Enix. 
+También pudimos ver a otros miembros del equipo y finalmente al CEO de Square Enix. 
 
 <p align="center"><img src="{{ site.baseurl }}/assets/images/articles/noticias/7_14_horas/7_14_horas_2.jpg" alt="CEO de Square Enix"/>
 <br/>
@@ -268,7 +268,7 @@ Como funcionara :
 - Los que estén **equipados** por nosotros, nuestro **asistentes** o en el **armario** de equipo irán al **Calamity Salvager**.
 - Los que tengamos en **nuestro inventario permanecerán en el**.
 - **Podemos sacarle la materia** que tengan puesta, pero **no generar materia** de ellos.
-- Si los **sacamos del Calamity Salvager** tendran las** materias que tenían** originalmente.
+- Si los **sacamos del Calamity Salvager** tendran las **materias que tenían** originalmente.
 - Nos **darán 15 huecos** mas **para armas** principales y **15 para anillos**.
 
 
