--- a/_posts/2021-07-10-7_special_14h.md
+++ b/_posts/2021-07-10-7_special_14h.md
@@ -86,7 +86,7 @@ Resumimos lo que hemos encontrado interesante sobre la prueba de rendimiento:
 <p align="center"><img src="{{ site.baseurl }}/assets/images/articles/noticias/7_14_horas/7_14_horas_4.jpg" alt="Nuevas Ciudades"/></p>
 
 - **Old Sharlayan** sera el equivalente a **Crystarium** en ShB o Kugane o Isghard en otras expansiones.
-- **Radz-at-Han** sera como **Eulmore** en ShB o Raghal's Reach o Idelshire en otras expansiones.
+- **Radz-at-Han** sera como **Eulmore** en ShB o Raghal's Reach o Idyllshire en otras expansiones.
 
 ### Nuevas áreas masivas
 
