--- a/_posts/2021-07-10-7_special_14h.md
+++ b/_posts/2021-07-10-7_special_14h.md
@@ -107,7 +107,7 @@ Resumimos lo que hemos encontrado interesante sobre la prueba de rendimiento:
 
 <p align="center"><img src="{{ site.baseurl }}/assets/images/articles/noticias/7_14_horas/7_14_horas_7.jpg" alt="Nueva incursión de high-end"/></p>
 
-- El modo **normal** estará **de salida** y el modo **salvaje** sera **2 semanas después**, como siempre se ha echo.
+- El modo **normal** saldrá **dos semanas después de la salida** de la expansión y el modo **salvaje** sera **2 semanas después de normal**, como siempre se ha echo.
 - Por lo cual estarán **disponibles** para que podamos raidear en las **vacaciones de navidad**.
 
 ### Nueva incursión de alianza
