incluir el reso de eventos

--- a/_posts/2021-07-10-7_special_14h.md
+++ b/_posts/2021-07-10-7_special_14h.md
@@ -59,7 +59,7 @@ Se nos presento la nueva prueba de rendimiento (*Benchmark en Ingles*), la herra
 
 Tenemos que destacar muchas cosas sobre esto:
 
-Estará disponible para **descargar** desde el **domingo 11 a las 9:00 a.m**, desde la gaceta suponemos que sera [la ubicación habitual](https://eu.finalfantasyxiv.com/benchmark/){:target="_blank"}.
+Lo podemos descargar desde [este enlace](https://eu.finalfantasyxiv.com/benchmark/){:target="_blank"}.
 
 Resumimos lo que hemos encontrado interesante sobre la prueba de rendimiento:
 
@@ -281,7 +281,14 @@ Como funcionara :
 - **20 de Julio**: **Parche 5.58**, con algunos cambios y la **temporada 20** de The Feast, **PvP**.
 - **13 de Agosto**: The **Moonfire Faire**, el evento de **verano**.
 - **27 de Agosto**: **The Rising**, el evento de **conmemoración** del la calamidad / salida de **ARR**.
-- **13 de Septiembre**: Colaboración del **Final Fantasy XV**, la **restearan** por lo cual debemos de hacer las **quest de nuevo para tener el vendedor**.
+- **13 de Septiembre**: Colaboración del **Final Fantasy XV**, lo **reiniciaran** por lo cual debemos de hacer las **quest de nuevo para tener el vendedor**.
+- **Mitad de Septiembre**: **Media Tour**, donde se compartirá mas noticias con la **prensa y medios especializados**.
+- **19 de Octubre**:  **Moogle Treasure Trove**, nuevo **evento** con los **Moogle** donde podemos conseguir interesantes premios realizando contenido, estará disponible la **Inferno Jacket**.
+- **19 de Noviembre**: **Lanzamiento anticipado** de Endwalker.
+- **23 de Noviembre**: **Lanzamiento** de Endwalker.
+- **30 de Noviembre**: All **Saints**' Wake, evento de **todos los santos**.
+- **15 de Diciembre**: The **Starlight** Celebration, evento **navideño**.
+- **1 de Enero**: **Heavensturn**, celebración del **año nuevo**.
 
 
 **Con esto hemos terminado nuestro "Resumen", espero que os haya gustado, no olvidéis comentar al final de la pagina.**
