--- a/_posts/2021-05-21-traducir.md
+++ b/_posts/2021-05-21-traducir.md
@@ -36,7 +36,7 @@ En la siguiente pestaña de configuración, yo (personalmente) he quitado la opc
 
 <p align="center"><img src="/assets/images/articles/guias/traduccion/tataru_5.png"></p>
 
-En la útlima pestaña de configuración tienes que configurar el tamaño y la posición de la ventana. La ventana podrás arrastrala y hacerla más grande o más pequeña si te acercas a las esquinas de la pestaña del **Tataru Helper** dentro del juego. Una vez que tengas la ventana del tamaño que quieras y en la posición que te guste, tienes que activar la opción *Click a través*. La opción *Auto Hide* sirve para que la ventana se te oculte tras unos segundos. Si activas esta opción, recomiendo poner entre 10 y 15 el valor de *Auto Hide*.
+En la última pestaña de configuración tienes que configurar el tamaño y la posición de la ventana. La ventana podrás arrastrala y hacerla más grande o más pequeña si te acercas a las esquinas de la pestaña del **Tataru Helper** dentro del juego. Una vez que tengas la ventana del tamaño que quieras y en la posición que te guste, tienes que activar la opción *Click a través*. La opción *Auto Hide* sirve para que la ventana se te oculte tras unos segundos. Si activas esta opción, recomiendo poner entre 10 y 15 el valor de *Auto Hide*.
 
 <p align="center"><img src="/assets/images/articles/guias/traduccion/tataru_6.png"></p>
 
