--- a/_posts/2021-06-09-chocobo.md
+++ b/_posts/2021-06-09-chocobo.md
@@ -16,11 +16,11 @@ En este artículo vamos a explicar las diferentes utilidades que podemos darle a
 
 Tras haber llegado a nivel 20 de la línea de misiones principales y haberte [unido a la Gran Compañía](/guia-facciones/){:target="_blank"} el oficial de ésta te dará una misión llamada *My little Chocobo* ([Vorágine](https://na.finalfantasyxiv.com/lodestone/playguide/db/quest/2aac1dcda64/){:target="_blank" class="eorzeadb_link"}, [Vívoras Gemelas](https://na.finalfantasyxiv.com/lodestone/playguide/db/quest/1ddd53e642c/){:target="_blank" class="eorzeadb_link"}, [Llamas Inmortales](https://na.finalfantasyxiv.com/lodestone/playguide/db/quest/cdf5de09896/){:target="_blank" class="eorzeadb_link"}) que, tras completarla, te dará la consecuente experiencia y un objeto llamado [Chocobo Whistle](https://na.finalfantasyxiv.com/lodestone/playguide/db/item/85f78cb2a87/){:target="_blank" class="eorzeadb_link"} que tras usarlo tendremos nuestro Chocobo siendo además nuestra primera montura.
 
-Para completar la misión lo primero que debemos hacer es comprar un artículo al Oficial *Quatermaster* de nuestra Gran Compañía llamado *Chocobo Issuance*. Este artículo esta en la pestaña *Materiel* y es distinto dependiendo de la Gran Compañía a la que nos hayamos unido. Este artículo cuesta 200 Sellos de la compañía. En la guía de la [Gran Compañía](/guia-facciones/){:target="_blank"}. Los más rapido para conseguir estos 200 primeros sellos es completar la misión que te da el oficial de la Gran Compañía nada más unirte a ellos.
+Para completar la misión lo primero que debemos hacer es comprar un artículo al Oficial *Quatermaster* de nuestra Gran Compañía llamado *Chocobo Issuance*. Este artículo esta en la pestaña *Materiel* y es distinto dependiendo de la Gran Compañía a la que nos hayamos unido. Este artículo cuesta 200 Sellos de la compañía. En la guía de la [Gran Compañía](/guia-facciones/){:target="_blank"}. Los más rápido para conseguir estos 200 primeros sellos es completar la misión que te da el oficial de la Gran Compañía nada más unirte a ellos.
 
 <p align="center"><img src="/assets/images/articles/guias/chocobo/chocoboissuance.jpg"></p>
 
-Tras haber conseguido el objeto, la misión nos mandará a un NPC. Le entregamos el objeto y éste nos entragará nuestro chocobo con accesorios y motivos de la Gran Compañía que hayamos elegido. Entonces, tendremos que darle un nombre a nuestro chocobo.
+Tras haber conseguido el objeto, la misión nos mandará a un NPC. Le entregamos el objeto y éste nos entregará nuestro chocobo con accesorios y motivos de la Gran Compañía que hayamos elegido. Entonces, tendremos que darle un nombre a nuestro chocobo.
 
 <p align="center"><img src="/assets/images/articles/guias/chocobo/nombre.jpg"></p>
 
@@ -36,11 +36,11 @@ Ahora ya terminamos la misión y nos dará el artículo [Chocobo Whistle](https:
 
 Cuando llegues a nivel 30 de la Misión Principal, **Docette** (South Shroud X: 17.0 Y: 28.2) te dará la misión [My Feisty Little Chocobo](https://na.finalfantasyxiv.com/lodestone/playguide/db/quest/d0c8145f2d1/){:target="_blank" class="eorzeadb_link"} que tras completarla podrás sacar al chocobo para ayudarte cuando estas haciendo misiones en mundo abierto.
 
-Como te enseñan a hacerlo en la misión, para invocar al chocobo tendrás que usar [Gysahl Greens](https://na.finalfantasyxiv.com/lodestone/playguide/db/item/eeca86f98cc/){:target="_blank" class="eorzeadb_link"}. Tras usarlo el chocobo estará contigo durante 30 min y podrás usar 2 *Gyshal Greens* para que esté 1h en total (las *Gyshal Greens* pueden ser arrastradas hasta sition en la barra de botones y agilizar el proceso de invocación del chocobo). Este tiempo no avanza si estas en montura, has entrado en Dutys de las misiones, haces mazmorras, etc. Conforme el chocobo vaya matando enemigos contigo, éste irá ganando experiencia y subiendo de nivel. Este nivel lo puedes comprobar en el menú Companion que está en el menú rojo de Character.
+Como te enseñan a hacerlo en la misión, para invocar al chocobo tendrás que usar [Gysahl Greens](https://na.finalfantasyxiv.com/lodestone/playguide/db/item/eeca86f98cc/){:target="_blank" class="eorzeadb_link"}. Tras usarlo el chocobo estará contigo durante 30 min y podrás usar 2 *Gyshal Greens* para que esté 1h en total (las *Gyshal Greens* pueden ser arrastradas hasta la barra de botones y agilizar el proceso de invocación del chocobo). Este tiempo no avanza si estas en montura, has entrado en Dutys de las misiones, haces mazmorras, etc. Conforme el chocobo vaya matando enemigos contigo, éste irá ganando experiencia y subiendo de nivel. Este nivel lo puedes comprobar en el menú Companion que está en el menú rojo de Character.
 
 <p align="center"><img src="/assets/images/articles/guias/chocobo/companion.jpg"></p>
 
-Cuando llegues a nivel 10, para seguir subiendo de nivel necestiarás dar a tu chocobo una [Thavnairian Onion](https://eu.finalfantasyxiv.com/lodestone/playguide/db/item/cd8f0584d92/){:target="_blank" class="eorzeadb_link"} por cada nivel que quieras subir. Estas cebollas se pueden cultivar en jardines de tu casa o comprarlas en la subasta (*Marquet board* en inglés). El nivel máximo al que llegará tu chocobo es nivel 20.
+Cuando llegues a nivel 10, para seguir subiendo de nivel necesitarás dar a tu chocobo una [Thavnairian Onion](https://eu.finalfantasyxiv.com/lodestone/playguide/db/item/cd8f0584d92/){:target="_blank" class="eorzeadb_link"} por cada nivel que quieras subir. Estas cebollas se pueden cultivar en jardines de tu casa o comprarlas en la subasta (*Marquet board* en inglés). El nivel máximo al que llegará tu chocobo es nivel 20.
 
 Para conseguir una ganancia extra de experiencia para tu chocobo, puedes usar los [Chocobo Stable](https://na.finalfantasyxiv.com/lodestone/playguide/db/item/2b885d683f8/){:target="_blank" class="eorzeadb_link"} que podrás colocarlos en tu casa o puedes usar el establo de la casa de la Compañía Libre. Para poder meter al chocobo en el establo, no puede estar invocado y para poderlo invocar como compañero de batalla, el chocobo no puede estar metido en el establo. Una vez el chocobo está en el establo lo puedes entrenar. Esto puede suceder 1 vez cada hora. Dependiendo de la verdura que le des al chocobo para entrenarlo, éste obtendrá un beneficio extra. Las verduras son las siguientes:
 
@@ -53,7 +53,7 @@ Para conseguir una ganancia extra de experiencia para tu chocobo, puedes usar lo
 
 Cuando el chocobo usa el establo, éste se ensucia. Mientras que esté sucio no podrás volver a meter al chocobo en el establo. Para limpiarlo tendrás que usar una [Magicked Stable Broom](https://eu.finalfantasyxiv.com/lodestone/playguide/db/item/58af1380e89/){:target="_blank" class="eorzeadb_link"}. Esta escoba se puede conseguir mediante la subasta (*Market board* en inglés), créditos de la Compañía libre o fabricarlas con Carpitería.
 
-Cada vez que el chocobo sube de nivel consigue puntos de habilidades que podrás administrar como tú quieras especializando así a tu chocobo. Estos puntos están distribuidos en 3 familias: *Defensor*, *Sanador* o *Atacante*. Cuando llegues a nivel 10 del nivel del chocobo, podrás completar una especialización completa. Cuando llegues a nivel 20, podrás completar 2 especializacions completas. Estos puntos de habilidades se pueden resetear con [Reagan Pepper](https://eu.finalfantasyxiv.com/lodestone/playguide/db/item/102abc133a5/){:target="_blank" class="eorzeadb_link"}. Estos objetos se puede comprar por 20 Allied Seals o 48.000 Sellos de la Gran Compañía.
+Cada vez que el chocobo sube de nivel consigue puntos de habilidades que podrás administrar como tú quieras especializando así a tu chocobo. Estos puntos están distribuidos en 3 familias: *Defensor*, *Sanador* o *Atacante*. Cuando llegues a nivel 10 del nivel del chocobo, podrás completar una especialización completa. Cuando llegues a nivel 20, podrás completar 2 especializaciones completas. Estos puntos de habilidades se pueden resetear con [Reagan Pepper](https://eu.finalfantasyxiv.com/lodestone/playguide/db/item/102abc133a5/){:target="_blank" class="eorzeadb_link"}. Estos objetos se puede comprar por 20 Allied Seals o 48.000 Sellos de la Gran Compañía.
 
 <p align="center"><img src="/assets/images/articles/guias/chocobo/habilidades.jpg"></p>
 
