--- a/_posts/2021-07-15-estela.md
+++ b/_posts/2021-07-15-estela.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Relatos de la Calamidad: La estela de Loisoix"
+title: "Relatos de la Calamidad: Bajo estela de Loisoix"
 author: lia
 categories: [ lore ]
 tags: [lore, relatos]
@@ -10,13 +10,14 @@ featured: false
 hidden: true
 ---
 
-El reino quedó alterado para siempre tras la Calamidad y la devastación que provocó. A lo largo de cinco historias cortas, nuestros personajes principales volverán a visitar los acontecimientos que rodearon ese fatídico día, ofreciendo otro punto de vista de lo que la Calamidad arrebató de sus vidas y de muchos y más.
+*El reino quedó alterado para siempre tras la Calamidad y la devastación que provocó. A lo largo de cinco historias cortas, nuestros personajes principales volverán a visitar los acontecimientos que rodearon ese fatídico día, ofreciendo otro punto de vista de lo que la Calamidad arrebató de sus vidas y de muchos y más.*
 
-<sub><sup>Traducción del relato [original](https://www.finalfantasyxiv.com/anniversary/na/detail/memoir_5.html?rgn=na&lng=en){:target="_blank"} publicado en la lodestone</sup></sub>
+<sub><sup>Traducción del relato [original](https://www.finalfantasyxiv.com/anniversary/na/detail/memoir_5.html?rgn=na&lng=en){:target="_blank"} publicado en la lodestone.</sup></sub>
 
 ### La estela de Loisoix
 
 El barco se deslizó fuera del puerto, ganando velocidad lentamente a medida que sus velas atrapaban la brisa costera. De pie sobre el muro del muelle con su padre, Alphinaud y Alisaie fueron testigos de la partida del barco; vieron cómo Louisoix Leveilleur, su amado abuelo, se alejaba con la marea.
+
 "Y se fue". La voz de Alphinaud era apenas un susurro, con la mirada fija en la forma menguante del barco. Alisaie miró a su hermano con los ojos enrojecidos, pero no dijo nada.
 Los gemelos habían recibido la noticia del próximo viaje de su abuelo de forma muy diferente. Mientras que uno aceptó su decisión con una serena practicidad, el otro se había quejado y llorado. Sin embargo, al verlos allí en el muelle, con sus pequeños brazos abrazando aquellos pesados grimorios como si sus jóvenes vidas dependieran de ello, uno tendría dificultades para distinguirlos.
 No eran tan diferentes como querían creer.
