--- a/_posts/2021-07-15-estela.md
+++ b/_posts/2021-07-15-estela.md
@@ -7,7 +7,7 @@ tags: [lore, relatos]
 image: assets/images/articles/relatos/estela/tales.jpg
 description: "Traducción al castellano de los relatos del lodestone, Relatos de la Calamidad: La estela de Loisoix"
 featured: false
-hidden: true
+hidden: false
 ---
 
 *El reino quedó alterado para siempre tras la Calamidad y la devastación que provocó. A lo largo de cinco historias cortas, nuestros personajes principales volverán a visitar los acontecimientos que rodearon ese fatídico día, ofreciendo otro punto de vista de lo que la Calamidad arrebató de sus vidas y de muchos y más.*
