--- a/_posts/2021-07-15-estela.md
+++ b/_posts/2021-07-15-estela.md
@@ -1,11 +1,11 @@
 ---
 layout: post
-title: "Relatos de la Calamidad: Bajo estela de Loisoix"
+title: "Relatos de la Calamidad: Bajo la estela de Loisoix"
 author: lia
 categories: [ lore ]
 tags: [lore, relatos]
 image: assets/images/articles/relatos/estela/tales.jpg
-description: "Traducción al castellano de los relatos del lodestone, Relatos de la Calamidad: La estela de Loisoix"
+description: "Traducción al castellano de los relatos del lodestone, Relatos de la Calamidad: Bajo la estela de Loisoix"
 featured: false
 hidden: false
 ---
@@ -14,7 +14,7 @@ hidden: false
 
 <sub><sup>Traducción del relato [original](https://www.finalfantasyxiv.com/anniversary/na/detail/memoir_5.html?rgn=na&lng=en){:target="_blank"} publicado en la lodestone.</sup></sub>
 
-### Bajo estela de Loisoix
+### Bajo la estela de Loisoix
 
 El barco se deslizó fuera del puerto, ganando velocidad lentamente a medida que sus velas atrapaban la brisa costera. De pie sobre el muro del muelle con su padre, Alphinaud y Alisaie fueron testigos de la partida del barco; vieron cómo Louisoix Leveilleur, su amado abuelo, se alejaba con la marea.
 
