--- a/_posts/2021-07-14-retainer.md
+++ b/_posts/2021-07-14-retainer.md
@@ -9,7 +9,7 @@ description: "Como conseguir y gestionar los Retainers"
 featured: false
 hidden: true
 ---
-Un ***Retainer*** (Asistente) es un NPC a través del cual podremos gestionar los objetos que queramos poner en subasta. Además nos dará mucho espacio de inventario y lo podremos mandar de misiones que nos traerán distintos objetos. 
+Un ***Retainer*** (Asistente) es un NPC a través del cual podremos gestionar los objetos que queramos poner en subasta. Además nos dará mucho espacio de inventario y lo podremos mandar de misiones que nos traerán distintos objetos. Es importante indicar que para los jugadores que estén con el ***Free Trial*** no podrán tener ***Retainers***.
 
 ### Cómo desbloquear nuestros *Retainers*.
 
@@ -17,9 +17,9 @@ Para desbloquearlo hay que avanzar en la **Historia principal** hasta que nivel 
 
 Tras haber completado las dos misiones, tenemos que hablar con unos NPCs, los ***Retainer Vocate***, y son <a href="https://na.finalfantasyxiv.com/lodestone/playguide/db/npc/npc/25d62b8e3af/" target="_blank" class="eorzeadb_link">Chachabi</a> en Ul'dah, <a href="https://na.finalfantasyxiv.com/lodestone/playguide/db/npc/npc/d0dd5c6c615/" target="_blank" class="eorzeadb_link">Parnell</a> en Old Grindania o <a href="https://na.finalfantasyxiv.com/lodestone/playguide/db/npc/npc/d3a350ce0c5/" target="_blank" class="eorzeadb_link">Frydwyb</a> en Limsa Lominsa. Tras hablar con ellos, nos darán la posibilidad de contratar nuestro primer ***Retainer*** tras elegir la opción ***Hire a Retainer*** en su menú. 
 
-<p align="center"><img src="{{ site.baseurl }}/assets/images/articles/guias/guiaretainer/hire.jpg" alt="Hire"/></p>
+<p align="center"><img src="{{ site.baseurl }}/assets/images/articles/guias/guiaretainer/hire.jpg" alt="hire"/></p>
 
-De base se tienen 2 Retainers como máximo pero puedes llegar a tener más si los contratas a través de tu cuenta <a href="https://sqex.to/Msp?utm_source=lodestone&utm_medium=pc_banner&utm_campaign=na_mogstation" target="_blank"><img src="/assets/images/articles/noticias/ffxiv_twitch/mog.png" height="50"></a>
+De base se tienen 2 ***Retainers*** como máximo pero puedes llegar a tener más si los contratas a través de tu cuenta <a href="https://sqex.to/Msp?utm_source=lodestone&utm_medium=pc_banner&utm_campaign=na_mogstation" target="_blank"><img src="/assets/images/articles/noticias/ffxiv_twitch/mog.png" height="50"></a>
 
 ### Cómo usar nuestros *Retainers*.
 
@@ -41,16 +41,16 @@ Para interactuar con nuestro asistente tendremos que utilizar una <a href="https
 
 #### Primer paso: Asignar una profesión a tu asistente.
 
-Tras hacer click en nuestro asistente la primera vez, tendremos que asignarle una profesión. Estas profesiones para el *Retainer* solo se las podrás asignar si las tienes desbloqueadas con tu personaje y, además, están limitadas a las profesiones de **A Realm Reborn**.
+Tras hacer click en nuestro asistente la primera vez, tendremos que asignarle una clase. Estas clases para el *Retainer* sólo se las podrás asignar si las tienes desbloqueadas con tu personaje y, además, están limitadas a las clases de **A Realm Reborn**.
 
-Tras esto, tendrás que equipar al asistente. Eligiendo la opción ***View retainer attributes and gear.*** podrás ponerle equipo que tengas en tu inventario y que se ajuste a su nivel y su profesión.
+Tras esto, tendrás que equipar al asistente. Eligiendo la opción ***View retainer attributes and gear.*** podrás ponerle equipo que tengas en tu inventario y que se ajuste a su nivel y su clase.
 
 <div class="container">
   <div class="row">
     <div class="col-xl">
       <p align="center"><img src="{{ site.baseurl }}/assets/images/articles/guias/guiaretainer/job.jpg" alt="job">
       <br/>
-      <sub><sup>Profesiones del Retainer.</sup></sub></p>
+      <sub><sup>Clases del Retainer.</sup></sub></p>
     </div>
     <div class="col-xl">
       <p align="center"><img src="{{ site.baseurl }}/assets/images/articles/guias/guiaretainer/equipo.jpg" alt="equipo">
@@ -59,7 +59,13 @@ Tras esto, tendrás que equipar al asistente. Eligiendo la opción ***View retai
   </div>
 </div>
 
-Podrás cambiar la profesión del *retainer* siempre que quieras teniendo en cuenta que éste pasará a tener nivel 1 de la nueva profesión.
+Podrás cambiar la clase del *Retainer* siempre que quieras teniendo en cuenta que éste pasará a tener nivel 1 de la nueva clase. Cuando el *Retainer* llegue a nivel 30, podrá elegir una profesión. Para ello necesitarás 40 ***Venture***.
+
+<blockquote>
+<b>Una Venture es una moneda que se consigue dentro del juego mediante 200 Sellos de la Gran Compañía. También se pueden conseguir a través de misiones de las Tribus Bestias o completando Guildleves.</b>
+</blockquote>
+
+<p align="center"><img src="{{ site.baseurl }}/assets/images/articles/guias/guiaretainer/venture.jpg" alt="venture"/></p>
 
 #### Mandarlo de Misiones.
 
@@ -75,4 +81,48 @@ Cuando le has asignado una profesión y equipado a tu asistente, estará prepara
 * ***Waterside Exploration* (18h) - *Fisher***: además de las **piezas de plata** o ***Allagan Bronze*** pueden traer distintos pescados. A niveles altos pueden traer además mascotas, objetos para tu casa y todo tipo de cosas aleatorias.
 * ***Quick Exploration* (1h) - *ALL***: Cuando tu *Retainer* alcance el nivel 10, se desbloquearán las *Quick Exploration*. Cuando vuelven los asistentes te traerán 1 objeto que a niveles altos puede tener mucho valor. 
 
-Cuando los *Retainers* vuelven de las misiones, además de los objetos que te traigan, ganarán experiencia e irán subiendo de nivel siendo el máximo el que tu personaje tenga de esa profesión.
+Para mandar una Misión gastarás 2 ***Ventures***. Cuando los *Retainers* vuelven de las misiones, además de los objetos que te traigan, ganarán experiencia e irán subiendo de nivel siendo el máximo el que tu personaje tenga de esa profesión.
+
+### Guardar objetos en el *Retainer*.
+
+Cada ***Retainer*** tiene unas bolsas donde podrás guardar equipo. Con la opción ***Entrust or withdraw items*** se te abrirán sus bolsas y podrás guardar allí lo que tú quieras hasta un máximo de 175 objetos.
+
+<div class="container">
+  <div class="row">
+    <div class="col-xl">
+      <p align="center"><img src="{{ site.baseurl }}/assets/images/articles/guias/guiaretainer/menu.jpg" alt="menu">
+      <br/>
+      <sub><sup>Menú del Retainer.</sup></sub></p>
+    </div>
+    <div class="col-xl">
+      <p align="center"><img src="{{ site.baseurl }}/assets/images/articles/guias/guiaretainer/175.jpg" alt="objetos">
+      <br/>
+      <sub><sup>Bolsas del Retainer.</sup></sub></p>
+    </div>
+  </div>
+</div>
+
+### Como vender objetos en el *Market Board* (Tablón del Mercado) utilizando tu *Retainer*.
+
+Con nuestro *Retainer* podrás poner objetos para venderlos en el ***Market Board***. Podrás elegir tanto los objetos que tengas en tu inventario, con la opción ***Sell items in your inventory on the market***, o los objetos que tengas guardados en el inventario del *Retainer*, con la opción ***Sell items in your retainer's inventory on the market***.
+
+Cada *Retainer* puede poner hasta 20 objetos a la venta. Cuando elijas el objeto a vender y hagas click derecho tendrás que elegir la opción ***Put up for sale***. Se nos abrirá una ventana en la que podremos ajustar el precio por la que queremos vender el objeto así como la cantidad de objetos que queremos vender (el precio en *Asking Price* siempre será por objeto). Con el botón ***Compare Prices*** podrás comprobar por cuanto se vende este objeto en el ***Market Board*** de tu Servidor.
+
+<div class="container">
+  <div class="row">
+    <div class="col-xl">
+      <p align="center"><img src="{{ site.baseurl }}/assets/images/articles/guias/guiaretainer/ajusteprecio.jpg" alt="ajuste precio">
+      <br/>
+      <sub><sup>Ajuste de precio del artículo.</sup></sub></p>
+    </div>
+    <div class="col-xl">
+      <p align="center"><img src="{{ site.baseurl }}/assets/images/articles/guias/guiaretainer/ajusteprecio2.jpg" alt="precio servidor">
+      <br/>
+      <sub><sup>Precio del artículo en el servidor.</sup></sub></p>
+    </div>
+  </div>
+</div>
+
+Podrás controlar el precio de los artículos cuando tu quieras volviendo a pulsar sobre *Compare prices* y así cambiar el precio para ajustar al mercado. Una vez vendas el artículo, se te cobrará **tarifa** (aclaro que no se te cobrará al poner el artículo, sino una vez lo vendas).
+
+El dinero que consigas vendiendo cosas con tu *Retainer* lo podrás ver al elegir la opción del menú ***Entrust or withdraw gil***. Así cada jugador puede elegir si dejar el dinero en el *Retainer* o cogerlo para su personaje.
